log/build_2026-01-22_09-30-36/assignment2_rt_py/stderr.log
Sorry: IndentationError: expected an indented block after 'if' statement on line 203 (robot_controller.py, line 204)
  File "/home/ubuntu/ros_workspace/install/assignment2_rt_py/lib/python3.12/site-packages/assignment2_rt_py/distance_calc.py", line 72
    else self.lidar <= self.threshold_:
         ^^^^
SyntaxError: expected ':'

